--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hi
+<html>
+  <head>
+    <title>git hub 이용한 html 화면</title>
+  </head>
+  <body>
+    <h1>git hub 이용한 html 화면</h1>
+  </body>
+</html>
